--- a/main/index.html
+++ b/main/index.html
@@ -7,6 +7,8 @@
     <title>web project</title>
   </head>
   <body>
-    <h1>hello world</h1>
+    <input type="text"><br>
+    <input type="password"><br><br>
+    <button>submit</button>
   </body>
 </html>
